<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foodify</string>
    <string name="action_settings">Settings</string>
    <string name="choose_food">GET INGREDIENTS</string>
    <string name="ingredient_types">Ingredient Types</string>
    <string name="select_ingredient_type">Select an Ingredient Type</string>
    <string name="num1">First Ingredient</string>
    <string name="num2">Second Ingredient</string>
    <string name="num3">Third Ingredient</string>

    <string name="welcome">Welcome to Foodify!</string>

    <string-array name="ingredient_types">
        <item>Sweet</item>
        <item>Savory</item>
    </string-array>

    <string name="no_recipes_found">Search using other random ingredients.</string>
    <string name="search_again">Search Again</string>

    <string name="content_description">Picture of recipe</string>
    <string name="favorite">Add to Favorites</string>
    <string name="remove">Remove from Favorites</string>
    <string name="favorited_items">Favorited Recipes</string>
    <string name="have_ingredients">I ALREADY HAVE INGREDIENTS</string>
    <string name="title_activity_favorited_recipes">FavoritedRecipesActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="type_of_selection">Would you like to use random ingredients or your own?</string>
    <string name="random_ingredients">Random</string>
    <string name="users_ingredients">Mine</string>
    <string name="title_activity_user_ingredients">UserIngredientsActivity</string>

    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="user_enter">Please separate each ingredient with a comma.</string>
    <string name="ingredients_hint">Separate each ingredient with a comma</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
