<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/food_salad_red_lunch"
        android:scaleType="centerCrop"
        android:contentDescription="photo of delicious dinner"/>

    <TextView
        android:id="@+id/home_question"
        android:text="@string/type_of_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="35sp"
        android:textColor="#fff"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/use_random"
        android:layout_marginTop="10dp"
        android:layout_below="@id/home_question"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/random_ingredients"
        android:textColor="#fff"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/use_users_ingredients"
        android:layout_below="@id/use_random"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/users_ingredients"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        />

</RelativeLayout>
