<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="recipegen.hackdfwrecipe.HomeActivity">

    <TextView
        android:id="@+id/home_question"
        android:text="@string/type_of_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/use_random"
        android:layout_marginTop="35dp"
        android:layout_below="@id/home_question"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_toLeftOf="@+id/center"
        android:text="@string/random_ingredients"
        android:onClick="goToRandom"
        android:textSize="17sp"
        android:background="@drawable/ingredient_button"
        />

    <TextView
        android:id="@+id/center"
        android:layout_centerHorizontal="true"
        android:layout_width="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/use_users_ingredients"
        android:layout_below="@id/home_question"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="17sp"
        android:text="@string/users_ingredients"
        android:onClick="goToUsers"
        android:background="@drawable/ingredient_button"
        />

</RelativeLayout>
