<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IngredientChooserActivity">
<!--
    <TextView
        android:id="@+id/choose_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/ingredient_types" />-->

    <Spinner
        android:id="@+id/ingredient_type_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredient_type_spinner"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:textColor="#fff"
        android:text="Ingredients to Use"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/slot1"
        android:layout_below="@id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/num1"/>

    <TextView
        android:id="@+id/slot2"
        android:layout_below="@id/slot1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/num2"/>

    <TextView
        android:id="@+id/slot3"
        android:layout_below="@id/slot2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/num3"/>


    <Button
        android:id="@+id/food_chooser"
        android:layout_marginTop="35dp"
        android:layout_below="@id/slot3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_food"
        android:onClick="randomPicker"
        android:textSize="17sp"
        android:background="@drawable/ingredient_button"/>

    <TextView
        android:id="@+id/app_credit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Powered by food2fork"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"/>

</RelativeLayout>
