<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/parmesan_bg"
        android:scaleType="centerCrop"
        android:contentDescription="photo of delicious dinner"/>

    <include layout="@layout/app_bar"
             android:id="@+id/app_bar"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/ingredient_type_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredient_type_spinner"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:text="Ingredients to Use"
        android:textSize="28sp"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/slot1"
        android:layout_below="@id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#fff"
        android:text="@string/num1"/>

    <TextView
        android:id="@+id/slot2"
        android:layout_below="@id/slot1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#fff"
        android:text="@string/num2"/>

    <TextView
        android:id="@+id/slot3"
        android:layout_below="@id/slot2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#fff"
        android:text="@string/num3"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/food_chooser"
        android:layout_marginTop="35dp"
        android:layout_below="@id/slot3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_food"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:id="@+id/app_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Powered by food2fork"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:textColor="#fff"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

</RelativeLayout>
